kustomize/overlays/scots-lab/apps/vert/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vert
  namespace: vert
spec:
  selector:
    app: vert
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
