kustomize/overlays/scots-lab/apps/vert/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vert
  namespace: vert
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: VERT
    gethomepage.dev/group: Tools
    gethomepage.dev/description: File Converter
    gethomepage.dev/icon: mdi-file-swap
    gethomepage.dev/href: https://vert.srbii.com
    gethomepage.dev/weight: '43'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - vert.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vert
      port: 4180
